--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -23,6 +23,7 @@
         Name="mainWindow"
         DataContext="{StaticResource MainVM}"
         Title="Phoenix Sport Center Management" Height="700" Width="1300">
+    
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedWindowCommand}" CommandParameter="{Binding ElementName=mainWindow}"/>
@@ -1328,20 +1329,133 @@
 
                         </Grid>
                         <Grid Grid.Row="2">
-                        <Button
-                                                Command="{Binding LogoutCommand}"
-                                                CommandParameter="{Binding ElementName=mainWindow}"
-    Style="{StaticResource MaterialDesignRaisedButton}"
-    Height="30"
-    materialDesign:ButtonAssist.CornerRadius="10"
-    ToolTip="MaterialDesignRaisedButton with Round Corners"
-    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
-                            <TextBlock
-      Text="LOG OUT" />
-                        </Button>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="400"></ColumnDefinition>
+                                <ColumnDefinition Width="400"></ColumnDefinition>
+                                <ColumnDefinition Width="400"></ColumnDefinition>
+                                
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0" Margin="35">
+                                <Button HorizontalAlignment="Center" Height="auto" VerticalAlignment="Center" Width="120"
+                                        Command="{Binding LogoutCommand}"
+                                                CommandParameter="{Binding ElementName=mainWindow}">
+
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="16*"/>
+                                            <ColumnDefinition Width="65*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="auto"></RowDefinition>
+                                            <RowDefinition></RowDefinition>
+                                        </Grid.RowDefinitions>
+                                        <materialDesign:PackIcon Kind="Logout" Height="87" Width="82"  Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="8,5,-2,0" />
+                                        <TextBlock FontWeight="Bold" HorizontalAlignment="Center" Margin="13,105,13.8,3.4" Grid.RowSpan="2" Grid.ColumnSpan="2">
+                       LOGOUT
+                                        </TextBlock>
+                                    </Grid>
+
+                                </Button>
+                            </Grid>
+                            <Grid Grid.Column="1" Margin="35">
+                                <materialDesign:Flipper
+  
+  VerticalAlignment="Center">
+                                    <materialDesign:Flipper.FrontContent>
+                                        <Button
+      Style="{StaticResource MaterialDesignFlatButton}"
+      Background="{DynamicResource PrimaryHueDarkBrush}"
+  Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"
+      Command="{x:Static materialDesign:Flipper.FlipCommand}"
+      Margin="8"
+      Width="192"
+      Content="CHANGE PASSWORD" />
+                                    </materialDesign:Flipper.FrontContent>
+                                    <materialDesign:Flipper.BackContent>
+                                        <Grid
+      Height="256"
+      Width="200">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition
+          Height="Auto" />
+                                                <RowDefinition
+          Height="*" />
+                                            </Grid.RowDefinitions>
+                                            <materialDesign:ColorZone
+        Mode="PrimaryDark"
+        Padding="6">
+                                                <StackPanel
+          Orientation="Horizontal">
+                                                    <Button
+            Style="{StaticResource MaterialDesignToolButton}"                                        
+            Command="{x:Static materialDesign:Flipper.FlipCommand}"
+            HorizontalAlignment="Left">
+                                                        <materialDesign:PackIcon
+              Kind="ArrowLeft"
+              HorizontalAlignment="Right" />
+                                                    </Button>
+                                                    <TextBlock
+            Margin="8 0 0 0"
+            VerticalAlignment="Center"
+            Text="CHANGE PASSWORD" />
+                                                </StackPanel>
+                                            </materialDesign:ColorZone>
+                                            <Grid
+                                                DataContext="{StaticResource LoginVM}"
+        Grid.Row="1"
+        Margin="0 6 0 0"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Top"
+        Width="172">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <TextBox
+          materialDesign:HintAssist.Hint="Enter current password"
+          materialDesign:HintAssist.IsFloating="True"
+          Margin="0 12 0 0"
+                                                    Text="{Binding CurrentPassword}"
+                                                    
+           />
+                                                <TextBox
+          Grid.Row="1"
+          materialDesign:HintAssist.Hint="Enter new password"
+          materialDesign:HintAssist.IsFloating="True"
+          Margin="0 12 0 0"
+                                                    Text="{Binding NewPassword}"
+           />
+                                                <TextBox
+                                                    Grid.Row="2"
+          materialDesign:HintAssist.Hint="Confirm new password"
+          materialDesign:HintAssist.IsFloating="True"
+          Margin="0 12 0 0"
+                                                    Text="{Binding ConfirmPassword}"
+           />
+                                                <Button
+                                                    Grid.Row="3"
+  Style="{StaticResource MaterialDesignFlatDarkBgButton}"
+  ToolTip="MaterialDesignFlatDarkButton"
+  Content="CONFIRM"
+                                                    
+                                                    Command="{Binding ChangepasswordCommand}"
+                                                    Margin="0 12 0 0"
+  IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" />
+                                            </Grid>
+                                        </Grid>
+                                    </materialDesign:Flipper.BackContent>
+                                </materialDesign:Flipper>
+                            </Grid>
+                            <Grid Grid.Column="2" Margin="35">
+                                
+                            </Grid>
+                           
                         </Grid>
                     </Grid>
                 </TabItem>
+                
             </TabControl>
         </Grid>
     </Grid>
