--- a/EditScField.xaml
+++ b/EditScField.xaml
@@ -1,5 +1,5 @@
-﻿<Window x:Class="SportCenter.EditField"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window x:Class="SportCenter.EditScField"
+         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -17,8 +17,8 @@
         ResizeMode="NoResize"
         WindowStyle="None"
         DataContext="{StaticResource SoccerFieldVM}"
-        x:Name="EditFiled"
-        Title="EditField" Height="800" Width="1300">
+        x:Name="EditBkFiled"
+        Title="EditBkField" Height="800" Width="1300">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -37,20 +37,18 @@
             <materialDesign:Card Grid.Row="0" Margin="20">
                 <WrapPanel Margin="0 0 0 10">
                     <TextBox Text="{Binding FieldName, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Field name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <ComboBox Margin="5 5 15 5" ItemsSource="{Binding Role}" SelectedItem="{Binding SelectedRole, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Condition" IsEditable="True" Style="{StaticResource MaterialDesignFloatingHintComboBox}"></ComboBox>
+                    <TextBox Text="{Binding FieldCondition, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Condition" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
                     <Button Command="{Binding EditField}" Content="Sửa" Margin="20" Width="100"></Button>
-
                 </WrapPanel>
             </materialDesign:Card>
             <materialDesign:Card Grid.Row="1" Margin="20" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <ListView ItemsSource="{Binding _List_field_sc}" SelectedItem="{Binding SelectedItem, Mode=OneWayToSource}">
+                    <ListView ItemsSource="{Binding List}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Id" DisplayMemberBinding="{Binding List_FieldSoccer.id}"></GridViewColumn>
-                                <GridViewColumn Header="Field name" DisplayMemberBinding="{Binding List_FieldSoccer.name}"></GridViewColumn>
-                                <GridViewColumn Header="Field type" DisplayMemberBinding="{Binding List_FieldSoccer.idType}"></GridViewColumn>
-                                <GridViewColumn Header="Condition" DisplayMemberBinding="{Binding List_FieldSoccer.condition}"></GridViewColumn>
+                                <GridViewColumn Header="Id" DisplayMemberBinding="{Binding id}"></GridViewColumn>
+                                <GridViewColumn Header="Field name" DisplayMemberBinding="{Binding name}"></GridViewColumn>
+                                <GridViewColumn Header="Condition" DisplayMemberBinding="{Binding condition}"></GridViewColumn>
                             </GridView>
                         </ListView.View>
                     </ListView>
