--- a/InfoFieldVl.xaml
+++ b/InfoFieldVl.xaml
@@ -1,5 +1,5 @@
-﻿<Window x:Class="SportCenter.InfoField"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window x:Class="SportCenter.InfoFieldVl"
+         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,10 +16,10 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         ResizeMode="NoResize"
         WindowStyle="None"
-        DataContext="{StaticResource BookingVM}"
+        DataContext="{StaticResource VlBookingVM}"
         x:Name="InfoFiled"
         Title="InfoField" Height="800" Width="1300">
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
@@ -30,7 +30,7 @@
             <uc:ControlBarUC Tag="{Binding Title, ElementName=mainWindow}" Grid.ColumnSpan="2"></uc:ControlBarUC>
         </Grid>
         <Grid Grid.Row="1">
-            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{Binding }"></TextBlock>
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="TitleTxt"></TextBlock>
         </Grid>
         <Grid Grid.Row="2">
             <Grid.RowDefinitions>
@@ -41,27 +41,21 @@
 
             <materialDesign:Card Grid.Row="0" Margin="5">
                 <WrapPanel Margin="0 0 0 10">
-                    <TextBox Text="{Binding addcustomername, UpdateSourceTrigger=PropertyChanged}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Customer name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <TextBox Text="{Binding addcustomerphone, UpdateSourceTrigger=PropertyChanged}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Phone number" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <DatePicker 
-                SelectedDateFormat="Short"
-                materialDesign:TextFieldAssist.TextFieldCornerRadius="0"
-                materialDesign:TextFieldAssist.HasFilledTextField="False"
-                materialDesign:HintAssist.IsFloating="True"
-                materialDesign:HintAssist.Hint="Date play"                     
-                HorizontalAlignment="Center" 
-                VerticalAlignment="Center"  
-                BorderBrush="Gray"         
-                FontWeight="Medium" FirstDayOfWeek="Monday" IsDropDownOpen="True" IsEnabled="True" />
-                    <materialDesign:TimePicker
-                        Margin="5,5,5,0"
+                    <TextBox x:Name="txbCusName" Text="{Binding addcustomername, UpdateSourceTrigger=PropertyChanged}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Customer name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                    <TextBox x:Name="txbCusPhone" Text="{Binding addcustomerphone, UpdateSourceTrigger=PropertyChanged}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Phone number" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                    <DatePicker x:Name="dp" VerticalAlignment="Center" SelectedDate="{Binding adddateplay}" Width="100" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Date play" Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
+                    <materialDesign:TimePicker SelectedTime="{Binding addstarttime}"
+                        x:Name="startT_picker"
+                        Margin="20,9,5,0"
                         HorizontalAlignment="Center"         
                 VerticalAlignment="Center"
                         materialDesign:HintAssist.Hint="Start time" 
                         ></materialDesign:TimePicker>
-                    <materialDesign:TimePicker
+                    <materialDesign:TimePicker SelectedTime="{Binding addendtime}"
+                        x:Name="endT_picker"
                         HorizontalAlignment="Center"         
                 VerticalAlignment="Center"
+                        Margin="10,9,0,0"
                         materialDesign:HintAssist.Hint="End time" 
                         ></materialDesign:TimePicker>
                 </WrapPanel>
@@ -69,7 +63,7 @@
 
             <materialDesign:Card Grid.Row="1" Margin="5">
                 <WrapPanel>
-                    <Button Command="{Binding AddCommand}" Content="Thêm" Margin="20" Width="100"></Button>
+                    <Button Command="{Binding AddCommand}" Content="Thêm" Margin="20" Width="100" Click="Button_Add"></Button>
                     <Button Command="{Binding EditCommand}" Content="Sửa" Margin="20" Width="100"></Button>
                     <Button Command="{Binding DeleteCommand}" Content="Xóa" Margin="20" Width="100"></Button>
                 </WrapPanel>
@@ -77,7 +71,7 @@
 
             <materialDesign:Card Grid.Row="2" Margin="5" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <ListView ItemsSource="{Binding ListbookingInfo}" SelectedItem="{Binding SelectedItem, Mode=OneWayToSource}">
+                    <ListView ItemsSource="{Binding ListbookingInfoVl}" SelectedItem="{Binding SelectedItem, Mode=OneWayToSource}">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Id" DisplayMemberBinding="{Binding id}"></GridViewColumn>
