--- a/VolleyballField.xaml
+++ b/VolleyballField.xaml
@@ -1,5 +1,5 @@
 ﻿<Window x:Class="SportCenter.VolleyballField" 
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -14,15 +14,15 @@
      TextElement.FontSize="13"
      TextOptions.TextFormattingMode="Ideal"
      TextOptions.TextRenderingMode="Auto"
-     Background="{DynamicResource MaterialDesignPaper}"
+        Background="#222831"
      FontFamily="{DynamicResource MaterialDesignFont}"
         ResizeMode="NoResize"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         
-        Name="VolleyballFieldWindow"
-       DataContext="{StaticResource VolleyballFieldVM}"
-        Title="Phoenix Sport Center Managament" Height="500" Width="525">
+        x:Name="SoccerFieldWindow"
+        DataContext="{StaticResource VolleyballFieldVM}"
+        Title="Phoenix Sport Center Managament" Height="500" Width="550">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedWindowCommand}"/>
@@ -31,42 +31,62 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
-            <RowDefinition/>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="70"></RowDefinition>
+            <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <uc:ControlBarUC Tag="{Binding Title, ElementName=ChooseSportWindow}" Height="32" Margin="0,0,0.046,-0.246" VerticalAlignment="Top"/>
+            <uc:ControlBarUC Tag="{Binding Title, ElementName=ChooseSportWindow}" Height="32"  VerticalAlignment="Top"></uc:ControlBarUC>
         </Grid>
-        <TextBlock Grid.Row="1" FontFamily="Bungee Inline" FontSize="30" Margin="151,10.123,147.046,391.938"  ><Run Text="Bóng chuyền"/></TextBlock>
-        <Grid Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="10,50,10,0">
-            <DockPanel Height="310">
-                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                    <ItemsControl x:Name="IC_football" ItemsSource="{Binding _List_field_vl}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Grid>
-                                    <materialDesign:Card Grid.Row="0" Width="463" Padding="8" UniformCornerRadius="6" Height="113" Margin="7" Grid.RowSpan="3" Grid.ColumnSpan="3">
-                                        <Grid>
-                                            <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan">
-                                                <materialDesign:PackIcon Kind="SoccerField" Height="auto" Width="100" Margin="0,-13,-0.308,-10.338" VerticalAlignment="Stretch" />
-                                            </materialDesign:Card>
-                                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,10,76.508,60.738" Width="211" Height="26"
-                         Foreground="#8c9aa1" FontSize="25" FontWeight="ExtraBold"       
-                                   ><Run Text="{Binding List_FieldVolleyball.name}"/></TextBlock>
-                                            <Grid>
-                                                <Button Margin="144,55,210.769,9.738" Content="Thông tin"/>
-                                            </Grid>
-                                            <Grid>
-                                                <Button Margin="264,55,91.508,9.738" Content="Đặt sân" />
-                                            </Grid>
-                                        </Grid>
-                                    </materialDesign:Card>
-                                </Grid>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </ScrollViewer>
-            </DockPanel>
+        <TextBlock Grid.Row="1" FontWeight="ExtraBold" Foreground="LightYellow" FontFamily="Bungee Inline" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"  ><Run Text="VOLLEYBALL"/></TextBlock>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Background="#00ADB5" Command="{Binding ShowAddCommand}" HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5"  HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="3*"/>
+                    </Grid.ColumnDefinitions>
+                    <materialDesign:PackIcon Grid.Column="0" Kind="Add" VerticalAlignment="Center" HorizontalAlignment="Center" Width="Auto" Height="Auto"/>
+                    <TextBlock Grid.Column="1" Margin="5 0 0 0" Text="Add" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Grid>
+            </Button>
+            <Button Grid.Column="2" Background="#00ADB5" Command="{Binding ShowEditFieldCommand}"  HorizontalAlignment="Left"  materialDesign:ButtonAssist.CornerRadius="5" HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="5*"/>
+                        <RowDefinition Height="3*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="3*"/>
+                    </Grid.ColumnDefinitions>
+                    <materialDesign:PackIcon Grid.Column="0" Kind="Adjust" VerticalAlignment="Center" HorizontalAlignment="Center" Width="Auto" Height="Auto" Grid.ColumnSpan="2" Margin="0,0,72,-0.369" Grid.RowSpan="2"/>
+                    <TextBlock Grid.Column="1" Margin="18.369,3,13,3.631" Text="Adjust" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.RowSpan="2"/>
+                </Grid>
+            </Button>
         </Grid>
+        <DockPanel Grid.Row="3">
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <ItemsControl x:Name="IC_football" ItemsSource="{Binding _List_field_vl}">
+
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <uc:VolleyballFieldControl></uc:VolleyballFieldControl>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.Template>
+                        <ControlTemplate>
+                            <ItemsPresenter/>
+                        </ControlTemplate>
+                    </ItemsControl.Template>
+                </ItemsControl>
+
+            </ScrollViewer>
+        </DockPanel>
     </Grid>
 
 </Window>
